# propositional_logic_calculator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: error.rs  expression.rs  lib.rs  lines.rs  main.rs  parser.rs  possible.rs  proof.rs
tests/: mod.rs  parser.rs  proof.rs
