[package]
name = "propositional_logic_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
enum-iterator = "1.4"
derive_builder = "0.12"
nonempty = "0.9"
once_cell = "1.18"
thiserror = "1"